Version 3.3.0
=============
* 버전 체계를 변경. (주 버전).(부버전).(패치)
* 다보리 멤버스도입
* 어드민 툴바에 다보리 메뉴 추가
* 아임포트 활성화시 PHP 에러 해결
* 아임포트 결제모듈: 다보리 세팅에서 설정한 "결제방식 지정"에 따라 "우커머스 > 설정 > 체크아웃" 설정을 변경.
  (결제방식 지정에 체크한 항목만 "우커머스 > 설정 > 체크아웃"에서 보임)
* IP Block 의 안정성 향상 (geolocate 데이터베이스 누락 시 자동 업데이트 로직 수정)

Version 3.2.5-alpha2
=====================
* 체크아웃 화면의 우편번호 검색 버튼이 작동하지 않는 버그 수정
* 주문 화면에서 성, 주소, 주/군의 validation check error 수정.

Version 3.2.5-alpha1
=====================
* 테스팅 도구 소스 트리로 포함.
* 포스트 내보내기 기능 포함.
* '직접 은행 이체 (BACS)' 결제 방법에서 입금인을 다르게 지정 가능.
* 체크아웃 화면의 '한국형 주소 찾기' 기능을 별도 모듈화.

Version 3.2.4-alpha3
====================
* 내부 호스팅에 설치된 플러그인들의 API URL 문제 수정 (CloudFlare)

Version 3.2.4-alpha2
====================
업데이트 내역
-----------
* Sym-MVC-Framework 플러그인의 활성화/비활성화에 관계 없도록 코드 수정
* 개발자 메뉴
  - wp-log 스타일 수정
  - 테스팅 코드 추가
* 복합과세 오류 수정
* sym_custom_data 테이블이 플러그인 활성화 시 생성되지 않던 오류 수정

Version 3.2.4-alpha1
====================

업데이트 내역
-----------
* WSKL_DEBUG 상수 추가
* 개발자 탭: 로그 파일 덤프 로직 추가
* KCP, 이니시스, AGS: 우커머스 > 설정 > 결제 탭에서 각 결제방법에 대행사 이름을 추가함.
* 복합과세 기능 추가.
  - 과세/비과세 세금 클래스 추가.
  - 인터페이스 추가

Version 3.2.3-r2
================

기능 업데이트
-----------
* 결제 게이트웨이 추가: 페이앱, 아임포트
* 설정 인터페이스 변경
  * 페이앱, 아임포트 설정 추가.
  * 결제대행업체 변경시 자동으로 화면 리프레시: 세부 설정 변경
* 배송 추적 기능 개선