@@ -7,6 +7,7 @@ Version 3.3.0
 * 아임포트 결제모듈: 다보리 세팅에서 설정한 "결제방식 지정"에 따라 "우커머스 > 설정 > 체크아웃" 설정을 변경.
   (결제방식 지정에 체크한 항목만 "우커머스 > 설정 > 체크아웃"에서 보임)
 * IP Block 의 안정성 향상 (geolocate 데이터베이스 누락 시 자동 업데이트 로직 수정)
+* wp-config editor 추가
 
 Version 3.2.5-alpha2
 =====================
